--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.6"
+    "knex": "^0.21.15",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.6",
+    "objection": "^2.2.4"
   }
 }
