--- a/package.json
+++ b/package.json
@@ -4,24 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "debug": "nodemon src/index.js"
+  },
+  "jest": {
+    "verbose": true
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.15.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
     "express": "^4.17.1",
-    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.15",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
     "objection": "^2.2.4"
+  },
+  "devDependencies": {
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "frisby": "^2.1.3",
+    "jest": "^26.6.3"
   }
 }
