--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
-    "objection": "^2.2.4"
+    "objection": "^2.2.4",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "eslint": "^7.17.0",
